# neuronpedia

./: .dockerignore  .env.demo  .env.example  .env.inference.deepseek-r1-distill-llama-8b.llamascope-slimpj-res-32k  .env.inference.gemma-2-2b-it.gemmascope-res-16k  .env.inference.gpt2-small.res-jb  .env.localhost  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.autointerp.gpu.yaml  docker-compose.hf-cache.yaml  docker-compose.inference.dev.yaml  docker-compose.inference.gpu.yaml  docker-compose.webapp.demo.yaml  docker-compose.webapp.dev.yaml  docker-compose.webapp.test.yaml  docker-compose.yaml  package-lock.json  package.json  webapp-dev.yaml
.cursor/: rules
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-request.md
.github/workflows/: autointerp-tests.yml  codecov.yml  inference-tests.yml  release.yml  semantic-versioning-release.yml  webapp-playwright.yml  webapp-vitest.yml
apps/autointerp/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  server.py
apps/autointerp/neuronpedia_autointerp/: utils.py
apps/autointerp/neuronpedia_autointerp/routes/explain/: default.py
apps/autointerp/neuronpedia_autointerp/routes/score/: embedding.py  fuzz_detection.py
apps/autointerp/tests/unit/: test_utils.py
apps/graph/: .env.example  .gitignore  README.md  pyproject.toml
apps/graph/neuronpedia_graph/: server.py
apps/graph/runpod/: .gitignore  Dockerfile  README.md  pyproject.toml  rp_handler.py  test_handler.py  test_input.json
apps/graph/scripts/: benchmark.sh
apps/inference/: .flake8  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  completion_chat_benchmark_before.json  pyproject.toml  start.py  supervisord.conf
apps/inference/.github/workflows/: ci.yml
apps/inference/benchmarking/: benchmark_cache.py  benchmark_completion_chat.py  cache_benchmark_results.json  completion_chat_benchmark_after.json  completion_chat_benchmark_before.json
apps/inference/dev/: dev.ipynb  manual_test_activations.ipynb  sae_config_test_test.json
apps/inference/k8s/: README.md
apps/inference/k8s/base/: deployment.yaml  kustomization.yaml  model-storage-pvc.yaml  service.yaml
apps/inference/k8s/overlays/cpu/base/: kustomization.yaml
apps/inference/k8s/overlays/cpu/gpt2-small/: kustomization.yaml
apps/inference/k8s/overlays/cpu/gpt2-small-public/: kustomization.yaml
apps/inference/k8s/overlays/gpu/base/: kustomization.yaml
apps/inference/k8s/overlays/gpu/base-lite/: kustomization.yaml
apps/inference/k8s/overlays/gpu/deepseek-r1-distill-llama-8b/: kustomization.yaml
apps/inference/k8s/overlays/gpu/deepseek-r1-distill-llama-8b-b/: kustomization.yaml
apps/inference/k8s/overlays/gpu/deepseek-r1-llama-8b-a/: kustomization.yaml
apps/inference/k8s/overlays/gpu/deepseek-r1-llama-8b-b/: kustomization.yaml
apps/inference/k8s/overlays/gpu/deepseek-r1-llama-8b-public-a/: kustomization.yaml
apps/inference/k8s/overlays/gpu/deepseek-r1-llama-8b-public-b/: kustomization.yaml
apps/inference/k8s/overlays/gpu/gemma-2-2b/: kustomization.yaml
apps/inference/k8s/overlays/gpu/gemma-2-2b-it-a/: kustomization.yaml
apps/inference/k8s/overlays/gpu/gemma-2-2b-it-b/: kustomization.yaml
apps/inference/k8s/overlays/gpu/gemma-2-2b-it-public/: kustomization.yaml
apps/inference/k8s/overlays/gpu/gemma-2-2b-public/: kustomization.yaml
apps/inference/k8s/overlays/gpu/gemma-2-9b/: kustomization.yaml
apps/inference/k8s/overlays/gpu/gemma-2-9b-it-a/: kustomization.yaml
apps/inference/k8s/overlays/gpu/gemma-2-9b-it-b/: kustomization.yaml
apps/inference/k8s/overlays/gpu/llama-31-8b/: kustomization.yaml
apps/inference/neuronpedia_inference/: args.py  config.py  layer_activation_cache.py  logging.py  mutex_lock.py  sae_manager.py  server.py  shared.py  testing.ipynb  utils.py
apps/inference/neuronpedia_inference/endpoints/: tokenize.py
apps/inference/neuronpedia_inference/endpoints/activation/: all.py  single.py  topk_by_token.py
apps/inference/neuronpedia_inference/endpoints/steer/: completion.py  completion_chat.py
apps/inference/neuronpedia_inference/endpoints/util/: sae_topk_by_decoder_cossim.py  sae_vector.py
apps/inference/neuronpedia_inference/inference_utils/: steering.py
apps/inference/neuronpedia_inference/saes/: base.py  saelens.py
apps/inference/tests/: conftest.py
apps/inference/tests/integration/: test_activation_all.py  test_activation_processor.py  test_activation_single.py  test_activation_topk_by_token.py  test_activations_all_endpoint.py  test_activations_test_endpoint.py  test_cache_performance_integration.py  test_completion.py  test_completion_chat_optimization.py  test_initialization.py  test_initialize.py  test_server_integration.py
apps/inference/tests/unit/: test_batch_steering.py  test_completion_chat_batch.py  test_config.py  test_layer_activation_cache.py  test_layer_cache_performance.py  test_sae_manager.py  test_server.py  test_utils.py
apps/webapp/: .dockerignore  .env.demo  .env.localhost  .env.playwright  .eslintignore  .eslintrc  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  Dockerfile  README.md  architecture.key  components.json  env.example  knip.json  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  setup.sh  tailwind.config.js  tsconfig.json  vitest.config.ts  vitest.setup.ts
schemas/: Makefile  README.md  generate-types.py  pyproject.toml
schemas/openapi/: shared.yaml  (+2 more)
utils/neuronpedia-utils/: .gitignore  README.md  pyproject.toml
utils/neuronpedia-utils/neuronpedia_utils/: .env.example  .gitignore  activation-thresholds.example.json  batch-autointerp.py  convert-saedashboard-to-neuronpedia-export.py  export-data.py  generate-dashboards-as-saelens.py  generate-dashboards-as-vectors.py
utils/neuronpedia-utils/neuronpedia_utils/db_models/: activation.py  explanation.py  feature.py  model.py  source.py  source_release.py  source_set.py
(+442 files in other folders)
