[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuronpedia_autointerp"
version = "1.0.0"
description = "Neuronpedia's AutoInterp Server - Based on EleutherAI's sae-auto-interp. Not using Poetry due to issue with xformers library."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["interpretability", "explainable-ai"]
authors = [
    {name = "Johnny Lin", email = "johnny@neuronpedia.org"},
]
dependencies = [
    "sae-auto-interp@git+https://github.com/hijohnnylin/sae-auto-interp",
    "fastapi",
    "pydantic",
    "uvicorn",
    "sentry-sdk[fastapi]",
    "python-dotenv",
    "neuronpedia-autointerp-client"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.1",
    "coverage>=7.6.0",
    "ruff>=0.7.4",
    "pyright>=1.1.351",
]

[tool.setuptools.packages.find]
include = ["neuronpedia_autointerp*"]

[tool.ruff.lint]
exclude = ["*.ipynb"]
ignore = ["E203", "E501", "E731", "F722", "E741", "F821", "F403", "ARG002"]
select = ["UP", "TID", "I", "F", "E", "ARG", "SIM", "RET", "LOG", "T20"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Union".msg = "Use `|` instead"
"typing.Optional".msg = "Use `| None` instead"
"typing.Dict".msg = "Use `dict` instead"
"typing.List".msg = "Use `list` instead"

[tool.pyright]
include = ["neuronpedia_autointerp"]
exclude = ["dist", ".venv"]
# Add this line to ignore import errors for missing libraries
reportMissingImports = "none"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUntypedFunctionDecorator = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryComparison = "none"
reportConstantRedefinition = "none"
reportUnknownLambdaType = "none"
reportUnknownParameterType = "none"
reportPrivateUsage = "none"
