[tool.poetry]
name = "neuronpedia_autointerp"
version = "1.0.0"
description = "Neuronpedia's AutoInterp Server - Based on EleutherAI's sae-auto-interp."
authors = ["Johnny Lin <johnny@neuronpedia.org>"]
license = "MIT"
readme = "README.md"
keywords = ["interpretability", "explainable-ai"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "*"
pydantic = "*"
uvicorn = "*"
python-dotenv = "*"
neuronpedia-autointerp-client = "*"
sentry-sdk = { extras = ["fastapi"], version = "*" }
sae-auto-interp = { git = "https://github.com/hijohnnylin/sae-auto-interp" }
bitsandbytes = "==0.42.0"

torchtyping = { git = "https://github.com/patrick-kidger/torchtyping.git", rev = "master" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
coverage = "^7.6.0"
ruff = "^0.7.4"
pyright = "^1.1.351"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Union".msg = "Use '|' instead"
"typing.Optional".msg = "Use '| None' instead"
"typing.Dict".msg = "Use 'dict' instead"
"typing.List".msg = "Use 'list' instead"

[tool.pyright]
include = ["neuronpedia_autointerp"]
exclude = ["dist", "*.venv"]
# Add this line to ignore import errors for missing libraries
reportMissingImports = "none"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUntypedFunctionDecorator = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryComparison = "none"
reportConstantRedefinition = "none"
reportUnknownLambdaType = "none"
reportUnknownParameterType = "none"
reportPrivateUsage = "none"
