[tool.poetry]
name = "neuronpedia-inference"
version = "1.0.0"
description = "Inference server for Neuronpedia. Note that a significant amount of this code/tests was re-written by Claude during a push for refactoring, and I don't agree with many of the changes. A more human+AI assisted refactor is probably a good idea."
authors = ["johnny@neuronpedia.org>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python-dotenv = "^1.0.1"
numpy = "^1.24"
psutil = "^5.9.8"
# copied from transformer-lens
torch = [
  { platform = "linux", version = ">=1.10" }, # We can use any torch version on Linux (e.g colab)
  { platform = "!=linux", version = ">=1.10,!=2.0,!=2.1.0" }, # Pin >=2.1.1 on Apple devices due to known MPS errors on 2.1.0
]
transformer-lens = {git = "https://github.com/hijohnnylin/TransformerLens.git", branch = "temp_branch_version"}
transformers = "^4.45.0"
einops = "^0.7.0"
pytest = "^8.1.1"
huggingface-hub = "^0.26.1"
huggingface = "^0.0.1"
pandas = "^2.2.2"
sae-lens = "^5.5.2"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.20.0"}
neuronpedia-inference-client = {path = "../../packages/python/neuronpedia-inference-client"}
nnsight = "^0.4.3"

[tool.poetry.group.dev.dependencies]
# line-profiler = "^4.1.3"
pytest = "^8.3.1"
coverage = "^7.6.0"
ruff = "^0.7.4"

[tool.ruff.lint]
exclude = ["*.ipynb"]
ignore = ["E203", "E501", "E731", "F722", "E741", "F821", "F403", "ARG002"]
select = ["UP", "TID", "I", "F", "E", "ARG", "SIM", "RET", "LOG", "T20"]

[tool.ruff.lint.per-file-ignores]
"neuronpedia_inference/sae_manager.py" = ["T20"]
"neuronpedia_inference/args.py" = ["T20"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
